Completed that I can. Added a new page. Can display orders and order details. Need to head back from how to get shifts and more about the alerts which will be explained in class.

--- a/.htaccess
+++ b/.htaccess
@@ -19,5 +19,7 @@ RewriteEngine On
 # General rewrite
 RewriteRule ^Index$ pages/Index.php [L]
 RewriteRule ^Customers$ pages/Customers.php [L]
+RewriteRule ^Orders$ pages/Orders.php [L]
+RewriteRule ^OrderDetails$ pages/OrderDetails.php [L]
 RewriteRule ^Inventory$ pages/Inventory.php [L]
 
